--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #61dafb;
+  font-family: 'Inter', sans-serif;
 }
 
 .App-logo {
@@ -14,14 +16,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #395489;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(5px + 2vmin);
   color: white;
+  padding-bottom: 20px;
 }
 
 .App-link {
@@ -35,4 +37,17 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+img{
+  border-radius: 30px;
+  border: 20px solid #0d3e5a;
+}
+
+.App-footer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 50%;
 }
